--- a/style.css
+++ b/style.css
@@ -40,3 +40,27 @@ nav li:first-child {
     margin-right: auto;
     margin-left: 20px;
 }
+.pop-up-header {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 2px solid black;
+
+}
+.pop-up {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+    background-color: white;
+    outline: 1px solid black;
+    border-radius: 5px;
+}
+.pop-up-title {
+    display: flex;
+    margin-left: 20px;
+    align-items: center;
+}
+.pop-up-body {
+    margin: 15px
+}
