--- a/style.css
+++ b/style.css
@@ -102,7 +102,40 @@ nav li:first-child {
     font-size: 34px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+.video-container {
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+.june-sitting {
+    margin: 30px 0 0 30px;
+    box-shadow: 10px 10px 5px rgba(52, 52, 52, 0.667);
+    display: none;
+}
+.charlee-beer {
+    margin: 30px 30px 0 0;
+    box-shadow: 10px 10px 5px rgba(52, 52, 52, 0.667);
+    display: none;
+    
+}
+.video-button-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 30px;
+}
+.dog-button {
+    padding:5px;
+    border-radius: 5px;
+    font-size: 15px;
+    background-color: rgb(255, 137, 137);
+}
 
+
+@media(max-width: 826px) {
+    .june-sitting, .charlee-beer {
+        display: none;
+    }
+}
 
 
 @media(max-width: 650px ) {
