--- a/style.css
+++ b/style.css
@@ -129,8 +129,119 @@ nav li:first-child {
     font-size: 15px;
     background-color: rgb(255, 137, 137);
 }
+/*-------------------------------Remote-------------------------*/
+.remote-container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    
+}
+#remote {
+    background-color: #333;
+    border-radius: 20px;
+    padding: 15px;
+    width: 250px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
 
+.button-row {
+    display: flex;
+    justify-content: space-around;
+    gap: 10px;
+}
 
+.remote-container button {
+    background-color: #555;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+    flex: 1; /* Makes buttons equal width in row */
+    font-size: 14px;
+}
+
+button:hover {
+    background-color: #777;
+}
+
+#power {
+    background-color: #d32f2f; 
+}
+
+#power:hover {
+    background-color: #b71c1c;
+}
+
+.number-pad {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+.tv {
+    height: 400px;
+    width: 400px;
+    outline: 20px solid rgb(70, 33, 33);
+    margin: 50px;
+    background-color: rgb(43, 43, 43);
+    border-radius: 3px;
+    position: relative;
+ 
+}
+.volume, .channel {
+    display: flex;
+    height: 100px;
+    width: 100px;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    color: rgb(227, 225, 225);
+    z-index: 10;
+    position: absolute;
+}
+.channel { 
+    top: 10px; 
+    left: 10px; 
+}
+.volume { 
+    top: 10px; 
+    right: 10px; 
+}
+
+.number-pad button:last-child {
+    grid-column: 2/3;
+}
+.tvOff {
+    display: flex;
+    height: 100px;
+    width: 200px;
+    color:white;
+    font-size: 40px;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    margin-left: 100px;
+}
+
+.number {
+    font-size: 30px;
+}
+.emoji {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 200px;
+    z-index: 5; /* so emoji is above background but lesser then Ch/vl */
+}
 @media(max-width: 826px) {
     .june-sitting, .charlee-beer {
         display: none;
