--- a/style.css
+++ b/style.css
@@ -317,7 +317,35 @@ nav li:first-child {
     font-size: 20px;
     border-radius: 5px;
 }
+/*--------------------------------objects---------------------*/
+.div-container1 {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 20px;
+}
+.div {
+    display: flex;
+    gap: 20px
+}
+.div > div {
+    width: 200px;
+    height: 200px;
+    font-size: 170px;
+}
+.scramble-button {
+    display: flex;
+    justify-content: center;
+}
+.scramble-button button {
+    padding: 5px;
+    border-radius: 5px;
+    width: 200px;
+    font-size: 25px;
+    background-color: rgb(125, 180, 125);
+    margin-top: 20px;
+}
 
+ 
 @media(max-width: 826px) {
     .june-sitting, .charlee-beer {
         display: none;
