--- a/style.css
+++ b/style.css
@@ -344,7 +344,67 @@ nav li:first-child {
     background-color: rgb(125, 180, 125);
     margin-top: 20px;
 }
-
+/*--------------------------------MontyHall---------------------*/
+.rules-container {
+    text-align: center;
+  }
+  .doors-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 100px;
+  }
+  .doors-container > div {
+    width: 203px;
+    height: 330px;
+    background-color: rgb(200, 199, 199);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 350px;
+  }
+  .doors-number {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+  }
+  .doors-number > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 50px;
+  }
+  #door1 {
+    background-image: url(images/Goat.jpeg);
+    background-size: cover;
+    background-position: center;
+  }
+  #door2 {
+    background-image: url(images/Goat.jpeg);
+    background-size: cover;
+    background-position: center;
+  }
+  #door3 {
+    background-image: url(images/Car.jpeg);
+    background-size: cover;
+    background-position: center;
+  }
+  .switch > button {
+    width: 100px;
+    padding: 3px 0;
+    margin-top: 15px;
+  }
+  .switch {
+    margin-top: 15px;
+    display: none;
+  }
+  .winner-loser {
+    display: flex;
+    justify-content: center;
+  }
+  .winner-loser h1 {
+    display: flex;
+    font-size: 100px;
+  }
  
 @media(max-width: 826px) {
     .june-sitting, .charlee-beer {
