--- a/style.css
+++ b/style.css
@@ -345,66 +345,88 @@ nav li:first-child {
     margin-top: 20px;
 }
 /*--------------------------------MontyHall---------------------*/
+
 .rules-container {
-    text-align: center;
-  }
-  .doors-container {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 100px;
-  }
-  .doors-container > div {
-    width: 203px;
-    height: 330px;
-    background-color: rgb(200, 199, 199);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 350px;
-  }
-  .doors-number {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 20px;
-  }
-  .doors-number > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 50px;
-  }
-  #door1 {
-    background-image: url(images/Goat.jpeg);
-    background-size: cover;
-    background-position: center;
-  }
-  #door2 {
-    background-image: url(images/Goat.jpeg);
-    background-size: cover;
-    background-position: center;
-  }
-  #door3 {
-    background-image: url(images/Car.jpeg);
-    background-size: cover;
-    background-position: center;
-  }
-  .switch > button {
-    width: 100px;
-    padding: 3px 0;
-    margin-top: 15px;
-  }
-  .switch {
-    margin-top: 15px;
-    display: none;
-  }
-  .winner-loser {
-    display: flex;
-    justify-content: center;
-  }
-  .winner-loser h1 {
-    display: flex;
-    font-size: 100px;
-  }
+  text-align: center;
+  position: relative;
+}
+.doors-container {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 130px;
+}
+.doors-container > div {
+  width: 190px;
+  height: 310px;
+  background-color: rgb(200, 199, 199);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 350px;
+  transition: opacity 0.3s ease-out;
+  cursor: pointer;
+}
+.doors-number {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px
+}
+.doors-number > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+}
+#door1 {
+  background-image: url(Goat.jpeg);
+  background-size: cover;
+  background-position: center;
+}
+#door2 {
+  background-image: url(Goat.jpeg);
+  background-size: cover;
+  background-position: center;
+}
+#door3 {
+  background-image: url(Car.jpeg);
+  background-size: cover;
+  background-position: center;
+}
+.switch > button {
+  width: 100px;
+  padding: 3px 0;
+  margin-top: 15px;
+}
+.switch {
+  margin-top: 15px;
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%);
+}
+.winner-loser {
+  display: flex;
+  justify-content: center;
+}
+.winner-loser h1 {
+  display: flex;
+  font-size: 100px;
+}
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.button-container button {
+  font-size: 30px;
+  padding: 5px 10px;
+  border-radius:10px;
+}
+.door-emoji {
+  transition: opacity 0.5s ease;
+  opacity: 1;
+}
  
 @media(max-width: 826px) {
     .june-sitting, .charlee-beer {
